syntax = "proto3";

option csharp_namespace = "OC_System.GrpcProtos";

package GrpcProtos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "common.proto";

service Operacion {

        rpc CreateOperacion (CreateOperacionRequest) returns (OperacionDTO);
        rpc GetOperacion (GetRequest) returns (NullableOperacionDTO);
        rpc GetAllOperacion (google.protobuf.Empty) returns (Operaciones);
        rpc UpdateOperacion (OperacionDTO) returns (google.protobuf.Empty);
        rpc DeleteOperacion (DeleteRequest) returns (google.protobuf.Empty);
}

message OperacionDTO{
	string id = 1;
	string name = 2;
	string descripcion = 3;
	string codigoUnidad = 4;
}

message Operaciones{
	repeated OperacionDTO items = 1;
}

message NullableOperacionDTO{
	oneof kind{
		google.protobuf.NullValue null = 1;
		OperacionDTO Operacion = 2;
	}
}

message CreateOperacionRequest{
	string name = 1;
	string descripcion =2;
	string codigoUnidad = 3;
}
